--- a/app/views/layouts/_right_login.html.erb
+++ b/app/views/layouts/_right_login.html.erb
@@ -4,9 +4,9 @@
     </div>
     <br>
     <p>初めての方はこちら</p>
-    <%= link_to "無料会員登録",signup_path , class: 'btn btn-primary btn-block' %>
+    <%= link_to "無料会員登録", new_user_path , class: 'btn btn-primary btn-block' %>
     <br>
     <p>会員の方はこちら</p>
-    <%= link_to "ログイン",login_path , class: 'btn btn-outline-primary btn-block' %>
+    <%= link_to "ログイン", login_path, class: 'btn btn-outline-primary btn-block' %>
 
 </div>
