--- a/app/views/boards/_form_board.html.erb
+++ b/app/views/boards/_form_board.html.erb
@@ -1,5 +1,5 @@
 <%= form_for(@board) do |f| %>
-<%= render 'shared/error_messages' %>
+<%= render 'layouts/error_messages', model: f.object %>
 <div class="form-group">
     <%= f.label :title, 'タイトル' %>
     <%= f.text_field :title, class: 'form-control' %>
