--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
                     <li class="nav-item"><%= link_to "プロフィール", current_user, class: "nav-link" %></li>
                     <li class="nav-item"><%= link_to "投稿一覧", boards_path,class: "nav-link" %></li>
                     <% else %>
-                    <li class="nav-item"><%= link_to "新規登録", signup_path, class: "nav-link"  %></li>
+                    <li class="nav-item"><%= link_to "新規登録", new_user_path, class: "nav-link"  %></li>
                     <li class="nav-item"><%= link_to "ログイン", login_path, class: "nav-link"  %></li>
                     <% end %>
                 </ul>
