--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <title>App</title>
   <%= csrf_meta_tags %>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 </head>
-
 <%= render 'layouts/header' %>
-
 <body>
   <% flash.each do |message_type, message| %>
+  <% if message_type == "error"%>
+  <% else %>
   <div class="alert alert-<%= message_type %> time-limit"><%= message %></div>
+  <% end %>
   <% end %>
   <%= yield %>
 </body>
-
 <%= render 'layouts/footer' %>
-
 </html>
