スタイル調整

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,34 +17,15 @@ h2 {
     font-weight: 700;
 }
 
-
-.box {
-    margin-bottom: 20px;
-    padding: 0 10px 10px 10px;
-}
-
-.box1 {
-    padding: 10px 1px;
-    margin: 10px 0;
+.box_profile {
+    padding: 5px 0;
+    margin-bottom: 16px;
     font-weight: bold;
     border: solid 3px #000000;
     background-color: #ffffff;
 }
 
-.box1 p {
-    margin: 0;
-    padding: 0;
-}
-
-.box2 {
-    padding: 10px 0;
-    margin: 10px 0;
-    font-weight: bold;
-    border: solid 3px #000000;
-    background-color: #ffffff;
-}
-
-.box2 p {
+.box_profile p {
     margin: 0;
     padding: 0;
 }
