--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -3,11 +3,12 @@
         <div class="row">
             <%= render 'layouts/left' %>
             <div class="col-lg-6">
-                <h2>投稿フォーム</h2>
-
+                <% if logged_in?%>
+                <h2>投稿</h2>
                 <div class="mx-5">
                     <%= link_to "いまなにしていますか？",new_board_path,class: 'btn btn-outline-secondary btn-block my-3' %>
                 </div>
+                <% end %>
 
                 <h2>投稿一覧</h2>
                 <%= paginate @boards %>
@@ -16,7 +17,7 @@
                 <% end %>
                 <%= paginate @boards %>
             </div>
-            
+
             <%= render 'layouts/right' %>
         </div>
     </div>
