--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,11 @@
+<% @boards = Board.all %>
 <body>
     <div class="container">
         <div class="row">
             <%= render 'layouts/left' %>
             <div class="col-lg-6">
-                <div class="box1">
-                    <h2>static_pages/home.html.erb</h2>
-                    ランディングページにします。
-                </div>
+                <h2>static_pages/home.html.erb</h2>
+                ランディングページ
             </div>
             <%= render 'layouts/right' %>
         </div>
