レイアウト調整

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4">
+                <div class="d-none d-lg-block">
                     <%= render 'layouts/left_reccomend' %>
                 </div>
                 <div class="col-lg-8">
