--- a/app/views/layouts/_left_reccomend.html.erb
+++ b/app/views/layouts/_left_reccomend.html.erb
@@ -1,4 +1,4 @@
-<h2>おすすめゲーム</h2>
+<h2>おすすめゲーム(仮)</h2>
 <ul class="list-group">
     <% 32.times do |n| %>
     <li class="list-group-item"><%= image_tag "recomend_game/Image#{n}.jpeg", :size => '50x50' %><%= "ゲーム#{n}" %></li>
