--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -2,20 +2,9 @@
     <div class="container">
         <div class="row">
             <%= render 'layouts/left' %>
-            <div class="col-lg-6">
-                <% if logged_in?%>
-                <h2>投稿</h2>
-                <div class="mx-5">
-                    <%= link_to "いまなにしていますか？",new_board_path,class: 'btn btn-outline-secondary btn-block my-3' %>
-                </div>
-                <% end %>
 
-                <h2>投稿一覧</h2>
-                <%= paginate @boards %>
-                <% @boards.each do |board|%>
-                <%= render board %>
-                <% end %>
-                <%= paginate @boards %>
+            <div class="col-lg-6">
+            <%= render 'shared/board_list', boards: @boards%>
             </div>
 
             <%= render 'layouts/right' %>
