seedデータ修正、デバッグ情報出力

--- a/app/views/layouts/_right_login.html.erb
+++ b/app/views/layouts/_right_login.html.erb
@@ -1,4 +1,4 @@
-<div class="border border-dark" style="padding: 15px;">
+<div class="border border-dark p-2 mb-3">
     <div class="d-flex align-items-start">
         GameBoradを使ってゲームの攻略情報を手に入れよう！
     </div>
