--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,7 +32,7 @@ h2 {
 
 .box3 {
     padding: 0;
-    margin-top:  10px;
+    margin-top: 10px;
     font-weight: bold;
     border: solid 3px #000000;
     background-color: #ffffff;
@@ -50,18 +50,44 @@ h2 {
 
 
 /*ページネーション自体のデザイン*/
-.pagination>li>a {          
-    border: none;     /*枠線をなくす*/
-    color: #696969;   /*文字の色を変える*/
-  }
-  
-  /* 表示しているページ番号のデザイン */
-  .pagination>.active>a {     
-    background: #93c9ff;     /*背景の色を変える*/
-    border-radius: 15px;     /*角を丸くする*/
-  }
-  
-  /*ホバー時のデザイン*/
-  .pagination>li>a:hover {        
-    border-radius: 15px;    /*角を丸くする*/
-  }
+.pagination>li>a {
+    border: none;
+    /*枠線をなくす*/
+    color: #696969;
+    /*文字の色を変える*/
+}
+
+/* 表示しているページ番号のデザイン */
+.pagination>.active>a {
+    background: #93c9ff;
+    /*背景の色を変える*/
+    border-radius: 15px;
+    /*角を丸くする*/
+}
+
+/*ホバー時のデザイン*/
+.pagination>li>a:hover {
+    border-radius: 15px;
+    /*角を丸くする*/
+}
+
+
+/* mixins, variables, etc. */
+
+$gray-medium-light: #eaeaea;
+
+@mixin box_sizing {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+/* miscellaneous */
+
+.debug_dump {
+    clear: both;
+    float: left;
+    width: 100%;
+    margin-top: 45px;
+    @include box_sizing;
+}
