--- a/app/views/layouts/_right_iPhone.html.erb
+++ b/app/views/layouts/_right_iPhone.html.erb
@@ -1,4 +1,4 @@
-<h2 class>iPhoneランキング(仮)</h2>
+<h2>iPhoneランキング(仮)</h2>
 <ul class="list-group">
     <% 5.times do |n| %>
     <li class="list-group-item"><%= image_tag "recomend_game/Image#{n}.jpeg", :size => '50x50' %><%= "ゲーム#{n}" %>
