--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <title><%= full_title(yield(:title)) %></title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <%= csrf_meta_tag %>
 </head>
 <%= render 'layouts/header' %>
 
@@ -16,6 +17,10 @@
   <% end %>
   <% end %>
   <%= yield %>
+
+  <%= debug(params) if Rails.env.development? %>
+  <%= debug @user if @user.present? %>
+
 </body>
 <%= render 'layouts/footer' %>
 
