--- a/app/views/users/_profile_user.html.erb
+++ b/app/views/users/_profile_user.html.erb
@@ -6,13 +6,17 @@
             </div>
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1">
-                    <% if user.followed_by?(current_user) %>
-                    <%# <%=link_to "フォロー済み", user_relationships_path(user.id), method: :delete %>
-                    <%= link_to "フォロー済み",user_relationships_path(user.id), method: :delete , class: 'btn btn-outline-secondary btn-block mx-3 mt-4' %>
+
+                    <% if current_user.id != user.id %>
+                        <% if user.followed_by?(current_user) %>
+                        <%= link_to "フォロー済み",user_relationships_path(user.id), method: :delete , class: 'btn btn-outline-secondary btn-block mx-3 mt-4' %>
+                        <% else %>
+                        <%= link_to "フォローする", user_relationships_path(user.id), method: :post , class: 'btn btn-outline-primary btn-block mx-3 mt-4' %>
+                        <% end %>
                     <% else %>
-                    <%= link_to "フォローする", user_relationships_path(user.id), method: :post , class: 'btn btn-outline-primary btn-block mx-3 mt-4' %>
-                    <%# <%=link_to "フォローする", user_relationships_path(user.id), method: :post %>
+                        <%= link_to "いいね済み掲示板一覧へ",favorites_user_path(current_user), method: :get , class: 'btn btn-outline-secondary btn-block mx-3 mt-4' %>
                     <% end %>
+
                 </div>
             </div>
         </div>
