--- a/app/views/users/_profile_user.html.erb
+++ b/app/views/users/_profile_user.html.erb
@@ -8,15 +8,15 @@
                 <div class="col-lg-10 col-lg-offset-1">
 
                     <% if current_user.id != user.id %>
-                        <% if user.followed_by?(current_user) %>
-                        <%= link_to "フォロー済み",user_relationships_path(user.id), method: :delete , class: 'btn btn-outline-secondary btn-block mx-3 mt-4' %>
-                        <% else %>
-                        <%= link_to "フォローする", user_relationships_path(user.id), method: :post , class: 'btn btn-outline-primary btn-block mx-3 mt-4' %>
-                        <% end %>
+                    <% if user.followed_by?(current_user) %>
+                    <%= link_to "フォロー済み",user_relationships_path(user.id), method: :delete , class: 'btn btn-outline-secondary btn-block mx-3 mt-4' %>
                     <% else %>
-                        <%= link_to "いいね済み掲示板一覧へ",favorites_user_path(current_user), method: :get , class: 'btn btn-outline-secondary btn-block mx-3 mt-4' %>
+                    <%= link_to "フォローする", user_relationships_path(user.id), method: :post , class: 'btn btn-outline-primary btn-block mx-3 mt-4' %>
                     <% end %>
-
+                    <% else %>
+                    <%= link_to "いいね済み掲示板一覧へ",favorites_user_path(current_user), method: :get , class: 'btn btn-outline-secondary btn-block mx-3 mt-4' %>
+                    <% end %>
+                    <%= link_to "フォローユーザー一覧",user_relationships_path(user.id), method: :get , class: 'btn btn-outline-secondary btn-block mx-3 mt-4' %>
                 </div>
             </div>
         </div>
@@ -36,7 +36,7 @@
                 <p class="mx-2"><%= user.profile %></p>
                 <div class="row col-6 offset-3">
                     <% if current_user.id == user.id %>
-                    <%= link_to "プロフィール編集", edit_user_path, class: 'btn btn-outline-secondary btn-block my-2' %>
+                    <%= link_to "プロフィール編集", edit_user_path(user.id), class: 'btn btn-outline-secondary btn-block my-2' %>
                     <% end %>
                 </div>
             </div>
