--- a/app/views/users/favorites.html.erb
+++ b/app/views/users/favorites.html.erb
@@ -3,6 +3,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-9">
+            <%= render 'profile_user', user: @user %>
             <div class="row">
                 <div class="col-lg-4 d-none d-lg-block">
                     <%= render 'layouts/left_reccomend'%>
@@ -14,8 +15,7 @@
                         <%= link_to "いまなにしていますか？",new_board_path,class: 'btn btn-outline-secondary btn-block my-3' %>
                     </div>
                     <% end %>
-
-                    <h2>投稿一覧</h2>
+                    <h2>お気に入り投稿一覧</h2>
                     <% @favorites.each do |fav|%>
                     <% board = Board.find(fav.board_id) %> 
                     <%= render board %>
