--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,15 +6,26 @@
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
+                <div class="dropdown">
+                    <button class="btn btn-outline-secondary dropdown-toggle mx-2" type="button" id="dropdownMenu2"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        タグ一覧
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                        <button class="dropdown-item" type="button">タグ1</button>
+                        <button class="dropdown-item" type="button">タグ2</button>
+                        <button class="dropdown-item" type="button">タグ3</button>
+                    </div>
+                </div>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <% if logged_in? %>
-                    <li class="nav-item"><%= link_to "プロフィール", current_user, class: "nav-link" %></li>
-                    <li class="nav-item"><%= link_to "投稿一覧", boards_path,class: "nav-link" %></li>
+                    <li class="nav-item mx-2"><%= link_to "プロフィール", current_user, class: "nav-link" %></li>
+                    <li class="nav-item mx-2"><%= link_to "投稿一覧", boards_path,class: "nav-link" %></li>
+                    <li class="nav-item mx-2"><%= link_to "ユーザー一覧", users_path,class: "nav-link" %></li>
                     <% else %>
-                    <li class="nav-item"><%= link_to "新規登録", new_user_path, class: "nav-link"  %></li>
-                    <li class="nav-item"><%= link_to "ログイン", login_path, class: "nav-link"  %></li>
+                    <li class="nav-item mx-2"><%= link_to "新規登録", new_user_path, class: "nav-link"  %></li>
+                    <li class="nav-item mx-2"><%= link_to "ログイン", login_path, class: "nav-link"  %></li>
                     <% end %>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
