--- a/app/views/users/_profile_user.html.erb
+++ b/app/views/users/_profile_user.html.erb
@@ -4,21 +4,16 @@
             <div>
                 <%= image_tag 'usersample.png',size: '150x150' %>
             </div>
-            <div class="row">
-                <div class="col-lg-10 col-lg-offset-1">
-
-                    <% if current_user.id != user.id %>
-                    <% if user.followed_by?(current_user) %>
-                    <%= link_to "フォロー済み",user_relationships_path(user.id), method: :delete , class: 'btn btn-outline-secondary btn-block mx-3 mt-4' %>
-                    <% else %>
-                    <%= link_to "フォローする", user_relationships_path(user.id), method: :post , class: 'btn btn-outline-primary btn-block mx-3 mt-4' %>
-                    <% end %>
-                    <% else %>
-                    <%= link_to "いいね済み掲示板一覧へ",favorites_user_path(current_user), method: :get , class: 'btn btn-outline-secondary btn-block mx-3 mt-4' %>
-                    <% end %>
-                    <%= link_to "フォローユーザー一覧",user_relationships_path(user.id), method: :get , class: 'btn btn-outline-secondary btn-block mx-3 mt-4' %>
-                </div>
-            </div>
+            <% if current_user.id != user.id %>
+            <% if user.followed_by?(current_user) %>
+            <%= link_to "フォロー済み",user_relationships_path(user.id), method: :delete , class: 'btn btn-outline-secondary btn-block mx-3 mt-4' %>
+            <% else %>
+            <%= link_to "フォローする", user_relationships_path(user.id), method: :post , class: 'btn btn-outline-primary btn-block mx-3 mt-4' %>
+            <% end %>
+            <% else %>
+            <%= link_to "いいね済み掲示板",favorites_user_path(current_user), method: :get , class: 'btn btn-outline-secondary btn-block mx-3 mt-4' %>
+            <% end %>
+            <%= link_to "フォローユーザー",user_relationships_path(user.id), method: :get , class: 'btn btn-outline-secondary btn-block mx-3 mt-4' %>
         </div>
         <div class="col-lg-9">
             <div class="row">
