--- a/app/views/users/_profile_user.html.erb
+++ b/app/views/users/_profile_user.html.erb
@@ -26,6 +26,16 @@
                     <p class="mx-2"><%= user.email %></p>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-lg-6">
+                    <h2 class="mx-2">フォロー数</h2>
+                    <p class="mx-auto"><%= Relationship.where(following_id: user.id).count %></p>
+                </div>
+                <div class="col-lg-6">
+                    <h2 class="mx-2">フォロワー数</h2>
+                    <p class="mx-auto"><%= Relationship.where(follower_id: user.id).count %></p>
+                </div>
+            </div>
             <div>
                 <h2 class="mx-2 mt-2">自己紹介文</h2>
                 <p class="mx-2"><%= user.profile %></p>
