--- a/app/views/layouts/_right_Android.html.erb
+++ b/app/views/layouts/_right_Android.html.erb
@@ -1,7 +1,9 @@
-<h2 class ="mt-3">Androidランキング(仮)</h2>
+<h2 class="mt-3">Androidランキング</h2>
+<% scraping_android %>
 <ul class="list-group">
     <% 5.times do |n| %>
-    <li class="list-group-item"><%= image_tag "recomend_game/Image#{n}.jpeg", :size => '50x50' %><%= "ゲーム#{n}" %>
-    </li>
+    <li class="list-group-item">
+        <%= image_tag RecommendGame.find(n+1).image, :size => '50x50' %><%= RecommendGame.find(n+1).title %></li>
     <% end %>
 </ul>
+<% RecommendGame.delete_all %>
