--- a/app/views/layouts/_left_reccomend.html.erb
+++ b/app/views/layouts/_left_reccomend.html.erb
@@ -1,9 +1,8 @@
 <h2>おすすめゲーム</h2>
-<% scraping_android %>
+<% scraping_android  %>
 <ul class="list-group">
     <% 20.times do |n| %>
     <li class="list-group-item">
-        <%= image_tag RecommendGame.find(n+1).image, :size => '50x50' %><%= RecommendGame.find(n+1).title %></li>
+        <%= image_tag RecommendGame.find(n).image, :size => '50x50' %><%= RecommendGame.find(n).title %></li>
     <% end %>
 </ul>
-<% RecommendGame.delete_all %>
