スクレイピング自動化

--- a/app/views/users/_profile_user.html.erb
+++ b/app/views/users/_profile_user.html.erb
@@ -1,8 +1,7 @@
 <div class="box_profile">
     <div class="row">
         <div class="col-lg-3 mb-3">
-            <div>
-            <% binding.pry %>
+            <div class="mx-3">
                 <% if user.image.nil?%>
                 <%= image_tag 'usersample.png', size: '150x150' %>
                 <% else %>
