--- a/app/views/layouts/_right_iPhone.html.erb
+++ b/app/views/layouts/_right_iPhone.html.erb
@@ -1,8 +1,7 @@
 <h2>iPhoneランキング</h2>
-<% scraping_ios %>
 <ul class="list-group">
     <% 5.times do |n| %>
     <li class="list-group-item">
-        <%= image_tag RecommendGame.find(n).image, :size => '50x50' %><%= RecommendGame.find(n).title %></li>
+        <%= image_tag RecommendIosGame.find(n).image, :size => '50x50' %><%= RecommendIosGame.find(n).title %></li>
     <% end %>
 </ul>
