2/15バックアップ用

--- a/app/views/layouts/_right_iPhone.html.erb
+++ b/app/views/layouts/_right_iPhone.html.erb
@@ -1,4 +1,5 @@
 <h2>iPhoneランキング</h2>
+<div class="timestamp">更新日時：<%= RecommendIosGame.first.updated_at.to_s(:datetime_jp) %></div>
 <ul class="list-group">
     <% 5.times do |n| %>
     <li class="list-group-item">
