--- a/app/views/layouts/_left_reccomend.html.erb
+++ b/app/views/layouts/_left_reccomend.html.erb
@@ -1,4 +1,5 @@
 <h2>おすすめゲーム</h2>
+<div class="timestamp">更新日時：<%= RecommendGame.first.updated_at.to_s(:datetime_jp) %></div>
 <ul class="list-group">
     <% 20.times do |n| %>
     <li class="list-group-item">
