--- a/app/views/layouts/_right_Android.html.erb
+++ b/app/views/layouts/_right_Android.html.erb
@@ -1,4 +1,5 @@
 <h2 class="mt-3">Androidランキング</h2>
+<div class="timestamp">更新日時：<%= RecommendGame.first.updated_at.to_s(:datetime_jp) %></div>
 <ul class="list-group">
     <% 5.times do |n| %>
     <li class="list-group-item">
