--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,7 +21,7 @@ h2 {
     padding: 5px 0;
     margin-bottom: 16px;
     font-weight: bold;
-    border: solid 3px #000000;
+    border: 1px solid rgba(0, 0, 0, 0.125);
     background-color: #ffffff;
 }
 
