--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -1,7 +1,7 @@
 <div class="box3 mb-3">
     <div class="user">ユーザー名：<%= link_to board.user.name, user_path(id: board.user_id) %></div>
     <div class="title">タイトル：<%= board.title %></div>
-        <div class="content">board.id：<%= board.id %></div>
+    <div class="content">board.id：<%= board.id %></div>
     <div class="timestamp">投稿日時：<%= board.created_at.to_s(:datetime_jp) %></div>
     <% if board.tags.present? %>
     <div>
@@ -16,6 +16,7 @@
         <div class="content">いいね数：<%= favorite.count %></div>
         <% comment = Comment.where(board_id: board.id) %>
         <div class="content">コメント数：<%= comment.count %></div>
+        <div class="content">Path：<%= request.path %></div>
     </div>
     <div>
         <%  if favorite.find_by(user_id: current_user.id).nil? %>
@@ -24,8 +25,11 @@
         <%= link_to "いいねを解除します", delete_board_path(board), method: :delete %>
         <% end %>
     </div>
-    <div class="mx-5">
+    <div class="mx-5 my-3">
+        <% if request.path == "/boards/#{board.id}" %>
+        <% else %>
         <%= link_to "詳細", board_path(board.id), class: 'btn btn-outline-primary btn-block my-2' %>
+        <% end %>
         <% if board.user_id == current_user.id %>
         <%= link_to "編集", edit_board_path(board.id), class: 'btn btn-outline-primary btn-block my-1' %>
         <%= link_to "削除" , board_path(board.id), :method => :delete, class: 'btn btn-outline-secondary btn-block my-3',data: { confirm: '削除しますか？' } %>
