--- a/app/views/users/_form_user.html.erb
+++ b/app/views/users/_form_user.html.erb
@@ -3,7 +3,7 @@
 <%= render 'layouts/error_messages', model: f.object %>
 
 <div class="form-group">
-    <%= f.label :name, 'ユーザー名' %>
+    <%= f.label :name%>
     <%= f.text_field :name, class: 'form-control' %>
 </div>
 <div class="form-group">
@@ -11,19 +11,20 @@
     <%= f.email_field :email, class: 'form-control' %>
 </div>
 
-<div class="field">
-    <%= f.label :image %>
-    <%= f.file_field :image %>
+<% if logged_in? %>
+<div class="form-group">
+    <%= f.label :image, 'Image' %>
+    <br>
+    <%= f.file_field :image, class: '' %>
 </div>
 
 <div class="form-group">
     <%= f.label :content, '自己紹介文' %>
     <%= f.text_area :profile, class: 'form-control', size: "10x5" %>
 </div>
-
-<% if !(logged_in?)%>
+<% else %>
 <div class="form-group">
-    <%= f.label :password, 'パスワード' %>
+    <%= f.label :password %>
     <%= f.password_field :password, class: 'form-control' %>
 </div>
 
@@ -36,5 +37,4 @@
 <div class="col-lg-8 offset-lg-2">
     <%= f.submit '登録する', class: 'btn btn-primary btn-block' %>
 </div>
-
 <% end %>
