--- a/app/views/users/_profile_user.html.erb
+++ b/app/views/users/_profile_user.html.erb
@@ -1,8 +1,9 @@
+<h2>プロフィール</h2>
 <div class="box_profile">
     <div class="row">
         <div class="col-lg-3 mb-3">
             <div class="mx-3">
-                <% if user.image.nil?%>
+                <% if user.image.to_s.empty? %>
                 <%= image_tag 'usersample.png', size: '150x150' %>
                 <% else %>
                 <%= image_tag user.image.to_s, size: '150x150'%>
@@ -18,6 +19,7 @@
             <%= link_to "いいね一覧",favorites_user_path(current_user), method: :get , class: 'btn btn-outline-secondary btn-block mx-3 mt-4' %>
             <% end %>
             <%= link_to "フォロー一覧",user_relationships_path(user.id), method: :get , class: 'btn btn-outline-secondary btn-block mx-3 mt-4' %>
+            <%# 未完成 %>
             <%= link_to "フォロワー一覧",user_relationships_path(user.id), method: :get , class: 'btn btn-outline-secondary btn-block mx-3 mt-4' %>
         </div>
         <div class="col-lg-9">
@@ -47,7 +49,7 @@
                 <div class="row col-6 offset-3">
                     <% if current_user.id == user.id %>
                     <%= link_to "プロフィール編集", edit_user_path(user.id), class: 'btn btn-outline-secondary btn-block my-2' %>
-                    <%= link_to "ユーザー削除", user_path, class: 'btn btn-outline-danger btn-block my-2', method: :delete %>
+                    <%= link_to "ユーザー削除", user_path(user.id), class: 'btn btn-outline-danger btn-block my-2', method: :delete, data: { confirm: '削除しますか？' }  %>
                     <% end %>
                 </div>
             </div>
