--- a/app/views/users/_form_user.html.erb
+++ b/app/views/users/_form_user.html.erb
@@ -13,7 +13,7 @@
 
 <% if logged_in? %>
 <div class="form-group">
-    <%= f.label :image, 'Image' %>
+    <%= f.label :image, 'プロフィール画像' %>
     <br>
     <%= f.file_field :image, class: '' %>
 </div>
@@ -38,3 +38,11 @@
     <%= f.submit '登録する', class: 'btn btn-primary btn-block' %>
 </div>
 <% end %>
+
+<% if logged_in? %>
+<h2 class="mt-3">ユーザー削除フォーム</h2>
+
+<div class="col-lg-8 offset-lg-2">
+    <%= link_to "ユーザー削除", user_path(current_user.id), class: 'btn btn-outline-danger btn-block', method: :delete, data: { confirm: '削除しますか？' }  %>
+    <div>
+        <% end %>
