--- a/app/views/users/_profile_user.html.erb
+++ b/app/views/users/_profile_user.html.erb
@@ -46,10 +46,9 @@
             <div>
                 <h2 class="mx-2 mt-2">自己紹介文</h2>
                 <p class="mx-2"><%= user.profile %></p>
-                <div class="row col-6 offset-3">
+                <div class="row col-10 offset-1">
                     <% if current_user.id == user.id %>
-                    <%= link_to "プロフィール編集", edit_user_path(user.id), class: 'btn btn-outline-secondary btn-block my-2' %>
-                    <%= link_to "ユーザー削除", user_path(user.id), class: 'btn btn-outline-danger btn-block my-2', method: :delete, data: { confirm: '削除しますか？' }  %>
+                    <%= link_to "プロフィール設定", edit_user_path(user.id), class: 'btn btn-outline-secondary btn-block my-2' %>
                     <% end %>
                 </div>
             </div>
