--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -31,6 +31,7 @@
                      {
                        prompt: 'タグで絞り込み',
                        class: 'form-control boards__select　dropdown-item',
+                       onchange: 'submit(this.form);'
                      }
                      %>
                             <% end %>
