--- a/app/views/layouts/_right_Android.html.erb
+++ b/app/views/layouts/_right_Android.html.erb
@@ -3,6 +3,6 @@
 <ul class="list-group">
     <% 5.times do |n| %>
     <li class="list-group-item">
-        <%= image_tag RecommendGame.find(n).image, :size => '50x50' %><%= RecommendGame.find(n).title %></li>
+        <div class="float-left"><%= image_tag RecommendGame.find(n).image, :size => '50x50' %></div><%= RecommendGame.find(n).title %></li>
     <% end %>
 </ul>
