--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,11 +1,46 @@
-<% @boards = Board.all %>
+<link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
+
 <body>
     <div class="container">
         <div class="row">
             <%= render 'layouts/left' %>
             <div class="col-lg-6">
-                <h2>static_pages/home.html.erb</h2>
-                ランディングページ
+                <h1>ALL Game
+                    <span class="txt-rotate" data-period="2000"
+                        data-rotate='[ "players.", "creaters.", "fun.", ".", "fun!" ]'></span>
+                </h1>
+
+                <div id="carousel2" class="carousel slide" data-ride="carousel" data-interval="4000" data-wrap="false">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carousel2" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel2" data-slide-to="1"></li>
+                        <li data-target="#carousel2" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" data-src="holder.js/100px300?bg=777&fg=555&text=第1スライド"
+                                alt="第1スライドイメージ">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" data-src="holder.js/100px300?&bg=666&fg=444&text=第2スライド"
+                                alt="第2スライドイメージ">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" data-src="holder.js/100px300?&bg=555&fg=333&text=第3スライド"
+                                alt="第3スライドイメージ">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carousel2" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">前へ</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carousel2" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">次へ</span>
+                    </a>
+                </div>
+
+
             </div>
             <%= render 'layouts/right' %>
         </div>
