--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,8 +10,8 @@
                 <ul class="navbar-nav mr-auto">
                     <% if logged_in? %>
                     <li class="nav-item mx-2"><%= link_to "プロフィール", current_user, class: "nav-link" %></li>
-                    <li class="nav-item mx-2"><%= link_to "投稿一覧", boards_path,class: "nav-link" %></li>
-                    <li class="nav-item mx-2"><%= link_to "ユーザー一覧", users_path,class: "nav-link" %></li>
+                    <li class="nav-item mx-2"><%= link_to "投稿", boards_path,class: "nav-link" %></li>
+                    <li class="nav-item mx-2"><%= link_to "ユーザー", users_path,class: "nav-link" %></li>
                     <% else %>
                     <li class="nav-item mx-2"><%= link_to "新規登録", new_user_path, class: "nav-link"  %></li>
                     <li class="nav-item mx-2"><%= link_to "ログイン", login_path, class: "nav-link"  %></li>
