--- a/app/views/relationships/_index_users.html.erb
+++ b/app/views/relationships/_index_users.html.erb
@@ -5,7 +5,10 @@
     <div class="content">自己紹介文：<%= user.profile %></div>
     <div class="content">ユーザーID：<%= user.id %></div>
     <div class="row col-8 offset-2">
+        <% if current_user.id != params[:id].to_i %>
+        <% else %>
         <%= link_to "フォロー済み",user_relationships_path(user.id), method: :delete , class: 'btn btn-outline-secondary btn-block' %>
+        <% end %>
         <%= link_to "詳細", user_path(user), class: 'btn btn-outline-primary btn-block my-2' %>
     </div>
 </div>
