--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,4 @@
+<% @boards = Board.all %>
 <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
 
 <body>
@@ -5,42 +6,44 @@
         <div class="row">
             <%= render 'layouts/left' %>
             <div class="col-lg-6">
-                <h1>ALL Game
-                    <span class="txt-rotate" data-period="2000"
-                        data-rotate='[ "players.", "creaters.", "fun.", ".", "fun!" ]'></span>
+                <h1 class="mb-5">
+                    <span class="txt-rotate" data-period="2000" data-rotate='[ "Game Board" ]'></span>
                 </h1>
 
-                <div id="carousel2" class="carousel slide" data-ride="carousel" data-interval="4000" data-wrap="false">
+                <div id="carousel-1" class="carousel slide">
                     <ol class="carousel-indicators">
-                        <li data-target="#carousel2" data-slide-to="0" class="active"></li>
-                        <li data-target="#carousel2" data-slide-to="1"></li>
-                        <li data-target="#carousel2" data-slide-to="2"></li>
+                        <li data-target="#carousel-1" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel-1" data-slide-to="1"></li>
+                        <li data-target="#carousel-1" data-slide-to="2"></li>
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" data-src="holder.js/100px300?bg=777&fg=555&text=第1スライド"
-                                alt="第1スライドイメージ">
+                            <img class="d-block w-100" src="https://placehold.it/1200x400" alt="First slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" data-src="holder.js/100px300?&bg=666&fg=444&text=第2スライド"
-                                alt="第2スライドイメージ">
+                            <img class="d-block w-100" src="https://placehold.it/1200x400" alt="Second slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" data-src="holder.js/100px300?&bg=555&fg=333&text=第3スライド"
-                                alt="第3スライドイメージ">
+                            <img class="d-block w-100" src="https://placehold.it/1200x400" alt="Third slide">
                         </div>
                     </div>
-                    <a class="carousel-control-prev" href="#carousel2" role="button" data-slide="prev">
+                    <a class="carousel-control-prev" href="#carousel-1" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">前へ</span>
+                        <span class="sr-only">Previous</span>
                     </a>
-                    <a class="carousel-control-next" href="#carousel2" role="button" data-slide="next">
+                    <a class="carousel-control-next" href="#carousel-1" role="button" data-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">次へ</span>
+                        <span class="sr-only">Next</span>
                     </a>
                 </div>
 
+                <h2 class="mt-5">Game Boardとは？</h2>
+                <p>GameBoardとは、ゲーム好きのユーザーがゲームの攻略情報を質問し合える会員制コミュニティーサイトです。質問や掲示板を作成する場合は、会員登録をお願いします。</p>
+                <%= link_to "無料会員登録", new_user_path , class: 'btn btn-primary btn-block' %>
 
+                <div class="mt-5">
+                    <%= render 'shared/board_list', boards: @boards%>
+                </div>
             </div>
             <%= render 'layouts/right' %>
         </div>
