--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,7 +5,10 @@
     <div class="container">
         <div class="row">
             <%= render 'layouts/left' %>
+
             <div class="col-lg-6">
+                <% if !(logged_in?) %>
+
                 <h1 class="mb-5">
                     <span class="txt-rotate" data-period="2000" data-rotate='[ "Game Board" ]'></span>
                 </h1>
@@ -37,11 +40,12 @@
                     </a>
                 </div>
 
-                <h2 class="mt-5">Game Boardとは？</h2>
+                <h2 class="my-5">Game Boardとは？</h2>
                 <p>GameBoardとは、ゲーム好きのユーザーがゲームの攻略情報を質問し合える会員制コミュニティーサイトです。質問や掲示板を作成する場合は、会員登録をお願いします。</p>
                 <%= link_to "無料会員登録", new_user_path , class: 'btn btn-primary btn-block' %>
+                <% end %>
 
-                <div class="mt-5">
+                <div>
                     <%= render 'shared/board_list', boards: @boards%>
                 </div>
             </div>
