home.htmlmb-3追記

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -42,7 +42,7 @@
 
                 <h2 class="my-5">Game Boardとは？</h2>
                 <p>GameBoardとは、ゲーム好きのユーザーがゲームの攻略情報を質問し合える会員制コミュニティーサイトです。質問や掲示板を作成する場合は、会員登録をお願いします。</p>
-                <%= link_to "無料会員登録", new_user_path , class: 'btn btn-primary btn-block' %>
+                <%= link_to "無料会員登録", new_user_path , class: 'btn btn-primary btn-block mb-3' %>
                 <% end %>
 
                 <div>
