--- a/app/views/layouts/_right_Android.html.erb
+++ b/app/views/layouts/_right_Android.html.erb
@@ -6,3 +6,4 @@
         <div class="float-left"><%= image_tag RecommendGame.find(n).image, :size => '50x50' %></div><%= RecommendGame.find(n).title %></li>
     <% end %>
 </ul>
+</div>
