--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,17 @@
 
 <head>
   <title><%= full_title(yield(:title)) %></title>
-  <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="{% static 'style.css' %}">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   <%= csrf_meta_tag %>
+
 </head>
 <%= render 'layouts/header' %>
+
 <body>
   <% flash.each do |message_type, message| %>
   <% if message_type == "error"%>
@@ -19,4 +24,5 @@
   <%= yield %>
 </body>
 <%= render 'layouts/footer' %>
+
 </html>
